tests/ui/feature-gates/feature-gate-extern_system_varargs.rs
fn system(f: extern "system" fn(usize, ...)) {
    //~^  ERROR using calling conventions other than "C"

    f(22, 44);
}

fn main() {}
